syntax = "proto3";

package com.example.srv.shop;

// 店铺管理服务
service ShopManagerService {
    rpc Create (ShopDetail) returns (Response) {
    }

    rpc GetList (Request) returns (ShopListItem) {
    }
    rpc GetById (Request) returns (ShopDetail) {
    }
    rpc Disable (Request) returns (Response) {
    }
}

message Request {
    uint32 id = 1;

    int32 page = 2;
    int32 page_size = 3;
    string search_key = 4;
    bool disable = 5;

}

message Response {
    uint32 id = 1;
}

// 店铺列表
message ShopListItem {
    repeated ShopDetail shops = 1;
    int32 count = 2;
}

// 店铺详情
message ShopDetail {
    string shop_name = 1;
    int32 bs_number = 2;
    bool is_active = 3;
    string addr = 4;
    float lat = 5;
    float lon = 6;
    string phone = 7;
    string industry = 8;
    uint32 industry_id = 9;
    repeated string running_period = 10;
    repeated string md5_list = 11;
    uint32 app_user_id = 12;
    uint32 region_id = 13;
    string region = 14;
    uint32 id = 15;
}

